--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "firebase": "^12.6.0",
+    "lottie-react": "^2.4.1",
+    "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
